turn .load() into .incl files

--- a/a/index.html
+++ b/a/index.html
@@ -17,33 +17,9 @@
 			<h2>
 				A
 			</h2>
-			<div id="toc">
-				<ul class="columns">
-					<li><a href="/a/absurd-claims/index.html">absurd claims</a></li>
-					<li><a href="/a/adametz-gerhard/index.html">Adametz, Gerhard</a></li>
-					<li><a href="/a/air-photos/index.html">air photos</a></li>
-					<li><a href="/a/aktion-1005/index.html">Aktion 1005</a></li>
-					<li><a href="/a/aktion-reinhardt/index.html">Aktion Reinhardt</a></li>
-					<li><a href="/a/aktion-reinhardt-camps/index.html">Aktion Reinhardt Camps</a></li>
-					<li><a href="/a/amiel-szymon/index.html">Amiel, Szymon</a></li>
-					<li><a href="/e/extirpation/index.html">annihilation</a></li>
-					<li><a href="/m/motives/index.html">anti-Semitism</a></li>
-					<li><a href="/a/auerbach-rachel/index.html">Auerbach, Rachel</a></li>
-					<li><a href="/a/aumeier-hans/index.html">Aumeier, Hans</a></li>
-					<li><a href="/a/auschwitz/index.html">Auschwitz</a></li>
-					<li><a href="/a/auschwitz-album/index.html">Auschwitz Album</a></li>
-					<li><a href="/b/birkenau/index.html">Auschwitz-Birkenau</a></li>
-					<li><a href="/a/auschwitz-bombing-of/index.html">Auschwitz, bombing of</a></li>
-					<li><a href="/a/auschwitz-death-books/index.html">Auschwitz Death Books</a></li>
-					<li><a href="/a/auschwitz-main-camp/index.html">Auschwitz Main Camp</a></li>
-					<li><a href="/a/auschwitz-museum/index.html">Auschwitz Museum</a></li>
-					<li><a href="/w/war-refugee-board-report/index.html">Auschwitz Protocols</a></li>
-					<li><a href="/a/auschwitz-trials/index.html">Auschwitz Trials</a></li>
-					<li><a href="/e/extirpation/index.html"><i>ausrottung</i></a></li>
-					<li><a href="/a/austria/index.html">Austria</a></li>
-					<li><a href="/a/avey-denis/index.html">Avey, Denis</a></li>
-				</ul>
-			</div>
+<!-- #bbinclude "a.incl" -->
+<ul class="columns"><li><a href="/a/absurd-claims/index.html">absurd claims</a></li><li><a href="/a/adametz-gerhard/index.html">Adametz, Gerhard</a></li><li><a href="/a/air-photos/index.html">air photos</a></li><li><a href="/a/aktion-1005/index.html">Aktion 1005</a></li><li><a href="/a/aktion-reinhardt/index.html">Aktion Reinhardt</a></li><li><a href="/a/aktion-reinhardt-camps/index.html">Aktion Reinhardt Camps</a></li><li><a href="/a/amiel-szymon/index.html">Amiel, Szymon</a></li><li><a href="/e/extirpation/index.html">annihilation</a></li><li><a href="/m/motives/index.html">anti-Semitism</a></li><li><a href="/a/auerbach-rachel/index.html">Auerbach, Rachel</a></li><li><a href="/a/aumeier-hans/index.html">Aumeier, Hans</a></li><li><a href="/a/auschwitz/index.html">Auschwitz</a></li><li><a href="/a/auschwitz-album/index.html">Auschwitz Album</a></li><li><a href="/b/birkenau/index.html">Auschwitz-Birkenau</a></li><li><a href="/a/auschwitz-bombing-of/index.html">Auschwitz, bombing of</a></li><li><a href="/a/auschwitz-death-books/index.html">Auschwitz Death Books</a></li><li><a href="/a/auschwitz-main-camp/index.html">Auschwitz Main Camp</a></li><li><a href="/a/auschwitz-museum/index.html">Auschwitz Museum</a></li><li><a href="/w/war-refugee-board-report/index.html">Auschwitz Protocols</a></li><li><a href="/a/auschwitz-trials/index.html">Auschwitz Trials</a></li><li><a href="/e/extirpation/index.html"><i>ausrottung</i></a></li><li><a href="/a/austria/index.html">Austria</a></li><li><a href="/a/avey-denis/index.html">Avey, Denis</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
