--- a/b/index.html
+++ b/b/index.html
@@ -17,74 +17,9 @@
 			<h2>
 				B
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/b/babi-yar/index.html">Babi Yar</a></li>
-						<li><a href="/b/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a></li>
-						<li><a href="/b/bacon-yehuda/index.html">Bacon, Yehuda</a></li>
-						<li><a href="/b/bad-nenndorf/index.html">Bad Nenndorf</a></li>
-						<li><a href="/b/bahir-moshe/index.html">Bahir, Moshe</a></li>
-						<li><a href="/b/bone-mill/index.html">Ball Mill</a></li>
-						<li><a href="/b/baltic-countries/index.html">Baltic Countries</a></li>
-						<li><a href="/b/bard-nomberg-helena/index.html">Bard-Nomberg, Helena</a></li>
-						<li><a href="/b/bartel-erwin/index.html">Bartel, Erwin</a></li>
-						<li><a href="/b/barton-russell/index.html">Barton, Russell</a></li>
-						<li><a href="/b/baskind-ber/index.html">Baskind, Ber</a></li>
-						<li><a href="/b/baum-bruno/index.html">Baum, Bruno</a></li>
-						<li><a href="/b/becher-kurt/index.html">Becher, Kurt</a></li>
-						<li><a href="/b/becker-august/index.html">Becker, August</a></li>
-						<li><a href="/b/becker-august/index.html">Becker Document</a></li>
-						<li><a href="/b/bednarz-wladyslaw/index.html">Bednarz, W&#322;adys&#322;aw</a></li>
-						<li><a href="/b/beer-abraham/index.html">Beer, Abraham</a></li>
-						<li><a href="/b/behr-emil/index.html">Behr, Emil</a></li>
-						<li><a href="/b/belgium/index.html">Belgium</a></li>
-						<li><a href="/b/belzec/index.html">Belzec</a></li>
-						<li><a href="/b/belzec-trial/index.html">Belzec Trial</a></li>
-						<li><a href="/b/bendel-charles-s/index.html">Bendel, Charles S.</a></li>
-						<li><a href="/b/bennahmias-daniel/index.html">Bennahmias, Daniel</a></li>
-						<li><a href="/b/benroubi-maurice/index.html">Benroubi, Maurice</a></li>
-						<li><a href="/b/berg-isai-davidovich/index.html">Berg, Isai Davidovich</a></li>
-						<li><a href="/b/bergen-belsen/index.html">Bergen-Belsen</a></li>
-						<li><a href="/b/bergen-belsen-trial/index.html">Bergen-Belsen Trials</a></li>
-						<li><a href="/b/berger-oskar/index.html">Berger, Oskar</a></li>
-						<li><a href="/i/iron-blue/index.html">Berlin blue</a></li>
-						<li><a href="/b/berlyant-semen/index.html">Berlyant, Semen</a></li>
-						<li><a href="/b/bialek-regina/index.html">Bialek, Regina</a></li>
-						<li><a href="/b/bialystok/index.html">Bia&#322;ystok</a></li>
-						<li><a href="/r/rumbula/index.html">Bikernieki</a></li>
-						<li><a href="/b/bily-henry/index.html">Bily, Henry</a></li>
-						<li><a href="/b/bimko-ada/index.html">Bimko, Ada</a></li>
-						<li><a href="/b/birkenau/index.html">Birkenau</a></li>
-						<li><a href="/b/birobidzhan/index.html">Birobidzhan</a></li>
-						<li><a href="/b/biskovitz-yaakov/index.html">Biskovitz, Ya&rsquo;akov</a></li>
-						<li><a href="/b/blaha-franz/index.html">Blaha, Franz</a></li>
-						<li><a href="/b/blatt-thomas-toivi/index.html">Blatt, Thomas Toivi</a></li>
-						<li><a href="/b/blobel-paul/index.html">Blobel, Paul</a></li>
-						<li><a href="/i/iron-blue/index.html">blue wall discoloration</a></li>
-						<li><a href="/b/blyazer-a/index.html">Blyazer, A.</a></li>
-						<li><a href="/b/bock-ludwig/index.html">Bock, Ludwig</a></li>
-						<li><a href="/b/bock-richard/index.html">B&ouml;ck, Richard</a></li>
-						<li><a href="/b/boger-wilhelm/index.html">Boger, Wilhelm</a></li>
-						<li><a href="/c/czechia/index.html">Bohemia</a></li>
-						<li><a href="/b/bomba-abraham/index.html">Bomba, Abraham</a></li>
-						<li><a href="/b/bone-mill/index.html">bone mill</a></li>
-						<li><a href="/b/bouard-michel-de/index.html">Bo&uuml;ard, Michel de</a></li>
-						<li><a href="/b/brener-hejnoch/index.html">Brener, Hejnoch</a></li>
-						<li><a href="/b/brest/index.html">Brest</a></li>
-						<li><a href="/b/british-radio-intercepts/index.html">British Radio Intercepts</a></li>
-						<li><a href="/b/broad-pery-s/index.html">Broad, Pery S.</a></li>
-						<li><a href="/b/brodsky-isaak/index.html">Brodsky, Isaak</a></li>
-						<li><a href="/b/bronnaya-gora/index.html">Bronnaya Gora</a></li>
-						<li><a href="/b/buchenwald/index.html">Buchenwald</a></li>
-						<li><a href="/b/buchholcowa-janina/index.html">Buchholcowa, Janina</a></li>
-						<li><a href="/b/budnik-david/index.html">Budnik, David</a></li>
-						<li><a href="/b/buki-milton/index.html">Buki, Milton</a></li>
-						<li><a href="/b/bulgaria/index.html">Bulgaria</a></li>
-						<li><a href="/b/buna/index.html">BUNA</a></li>
-						<li><a href="/b/bunkers/index.html">bunkers</a></li>
-						<li><a href="/b/burmeister-walter/index.html">Burmeister, Walter</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "b.incl" -->
+<ul class="columns"><li><a href="/b/babi-yar/index.html">Babi Yar</a></li><li><a href="/b/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a></li><li><a href="/b/bacon-yehuda/index.html">Bacon, Yehuda</a></li><li><a href="/b/bad-nenndorf/index.html">Bad Nenndorf</a></li><li><a href="/b/bahir-moshe/index.html">Bahir, Moshe</a></li><li><a href="/b/bone-mill/index.html">Ball Mill</a></li><li><a href="/b/baltic-countries/index.html">Baltic Countries</a></li><li><a href="/b/bard-nomberg-helena/index.html">Bard-Nomberg, Helena</a></li><li><a href="/b/bartel-erwin/index.html">Bartel, Erwin</a></li><li><a href="/b/barton-russell/index.html">Barton, Russell</a></li><li><a href="/b/baskind-ber/index.html">Baskind, Ber</a></li><li><a href="/b/baum-bruno/index.html">Baum, Bruno</a></li><li><a href="/b/becher-kurt/index.html">Becher, Kurt</a></li><li><a href="/b/becker-august/index.html">Becker, August</a></li><li><a href="/b/becker-august/index.html">Becker Document</a></li><li><a href="/b/bednarz-wladyslaw/index.html">Bednarz, W&#322;adys&#322;aw</a></li><li><a href="/b/beer-abraham/index.html">Beer, Abraham</a></li><li><a href="/b/behr-emil/index.html">Behr, Emil</a></li><li><a href="/b/belgium/index.html">Belgium</a></li><li><a href="/b/belzec/index.html">Belzec</a></li><li><a href="/b/belzec-trial/index.html">Belzec Trial</a></li><li><a href="/b/bendel-charles-s/index.html">Bendel, Charles S.</a></li><li><a href="/b/bennahmias-daniel/index.html">Bennahmias, Daniel</a></li><li><a href="/b/benroubi-maurice/index.html">Benroubi, Maurice</a></li><li><a href="/b/berg-isai-davidovich/index.html">Berg, Isai Davidovich</a></li><li><a href="/b/bergen-belsen/index.html">Bergen-Belsen</a></li><li><a href="/b/bergen-belsen-trial/index.html">Bergen-Belsen Trials</a></li><li><a href="/b/berger-oskar/index.html">Berger, Oskar</a></li><li><a href="/i/iron-blue/index.html">Berlin blue</a></li><li><a href="/b/berlyant-semen/index.html">Berlyant, Semen</a></li><li><a href="/b/bialek-regina/index.html">Bialek, Regina</a></li><li><a href="/b/bialystok/index.html">Bia&#322;ystok</a></li><li><a href="/r/rumbula/index.html">Bikernieki</a></li><li><a href="/b/bily-henry/index.html">Bily, Henry</a></li><li><a href="/b/bimko-ada/index.html">Bimko, Ada</a></li><li><a href="/b/birkenau/index.html">Birkenau</a></li><li><a href="/b/birobidzhan/index.html">Birobidzhan</a></li><li><a href="/b/biskovitz-yaakov/index.html">Biskovitz, Ya&rsquo;akov</a></li><li><a href="/b/blaha-franz/index.html">Blaha, Franz</a></li><li><a href="/b/blatt-thomas-toivi/index.html">Blatt, Thomas Toivi</a></li><li><a href="/b/blobel-paul/index.html">Blobel, Paul</a></li><li><a href="/i/iron-blue/index.html">blue wall discoloration</a></li><li><a href="/b/blyazer-a/index.html">Blyazer, A.</a></li><li><a href="/b/bock-ludwig/index.html">Bock, Ludwig</a></li><li><a href="/b/bock-richard/index.html">B&ouml;ck, Richard</a></li><li><a href="/b/boger-wilhelm/index.html">Boger, Wilhelm</a></li><li><a href="/c/czechia/index.html">Bohemia</a></li><li><a href="/b/bomba-abraham/index.html">Bomba, Abraham</a></li><li><a href="/b/bone-mill/index.html">bone mill</a></li><li><a href="/b/bouard-michel-de/index.html">Bo&uuml;ard, Michel de</a></li><li><a href="/b/brener-hejnoch/index.html">Brener, Hejnoch</a></li><li><a href="/b/brest/index.html">Brest</a></li><li><a href="/b/british-radio-intercepts/index.html">British Radio Intercepts</a></li><li><a href="/b/broad-pery-s/index.html">Broad, Pery S.</a></li><li><a href="/b/brodsky-isaak/index.html">Brodsky, Isaak</a></li><li><a href="/b/bronnaya-gora/index.html">Bronnaya Gora</a></li><li><a href="/b/buchenwald/index.html">Buchenwald</a></li><li><a href="/b/buchholcowa-janina/index.html">Buchholcowa, Janina</a></li><li><a href="/b/budnik-david/index.html">Budnik, David</a></li><li><a href="/b/buki-milton/index.html">Buki, Milton</a></li><li><a href="/b/bulgaria/index.html">Bulgaria</a></li><li><a href="/b/buna/index.html">BUNA</a></li><li><a href="/b/bunkers/index.html">bunkers</a></li><li><a href="/b/burmeister-walter/index.html">Burmeister, Walter</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
