--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -33,13 +33,15 @@
 				<h3>
 					A
 				</h3>
-				<div id="a-section">
-				</div>
+<!-- #bbinclude "a.incl" -->
+<ul class="columns"><li><a href="/a/absurd-claims/index.html">absurd claims</a></li><li><a href="/a/adametz-gerhard/index.html">Adametz, Gerhard</a></li><li><a href="/a/air-photos/index.html">air photos</a></li><li><a href="/a/aktion-1005/index.html">Aktion 1005</a></li><li><a href="/a/aktion-reinhardt/index.html">Aktion Reinhardt</a></li><li><a href="/a/aktion-reinhardt-camps/index.html">Aktion Reinhardt Camps</a></li><li><a href="/a/amiel-szymon/index.html">Amiel, Szymon</a></li><li><a href="/e/extirpation/index.html">annihilation</a></li><li><a href="/m/motives/index.html">anti-Semitism</a></li><li><a href="/a/auerbach-rachel/index.html">Auerbach, Rachel</a></li><li><a href="/a/aumeier-hans/index.html">Aumeier, Hans</a></li><li><a href="/a/auschwitz/index.html">Auschwitz</a></li><li><a href="/a/auschwitz-album/index.html">Auschwitz Album</a></li><li><a href="/b/birkenau/index.html">Auschwitz-Birkenau</a></li><li><a href="/a/auschwitz-bombing-of/index.html">Auschwitz, bombing of</a></li><li><a href="/a/auschwitz-death-books/index.html">Auschwitz Death Books</a></li><li><a href="/a/auschwitz-main-camp/index.html">Auschwitz Main Camp</a></li><li><a href="/a/auschwitz-museum/index.html">Auschwitz Museum</a></li><li><a href="/w/war-refugee-board-report/index.html">Auschwitz Protocols</a></li><li><a href="/a/auschwitz-trials/index.html">Auschwitz Trials</a></li><li><a href="/e/extirpation/index.html"><i>ausrottung</i></a></li><li><a href="/a/austria/index.html">Austria</a></li><li><a href="/a/avey-denis/index.html">Avey, Denis</a></li></ul>
+<!-- end bbinclude -->
 				<h3>
 					B
 				</h3>
-				<div id="b-section">
-				</div>
+<!-- #bbinclude "b.incl" -->
+<ul class="columns"><li><a href="/b/babi-yar/index.html">Babi Yar</a></li><li><a href="/b/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a></li><li><a href="/b/bacon-yehuda/index.html">Bacon, Yehuda</a></li><li><a href="/b/bad-nenndorf/index.html">Bad Nenndorf</a></li><li><a href="/b/bahir-moshe/index.html">Bahir, Moshe</a></li><li><a href="/b/bone-mill/index.html">Ball Mill</a></li><li><a href="/b/baltic-countries/index.html">Baltic Countries</a></li><li><a href="/b/bard-nomberg-helena/index.html">Bard-Nomberg, Helena</a></li><li><a href="/b/bartel-erwin/index.html">Bartel, Erwin</a></li><li><a href="/b/barton-russell/index.html">Barton, Russell</a></li><li><a href="/b/baskind-ber/index.html">Baskind, Ber</a></li><li><a href="/b/baum-bruno/index.html">Baum, Bruno</a></li><li><a href="/b/becher-kurt/index.html">Becher, Kurt</a></li><li><a href="/b/becker-august/index.html">Becker, August</a></li><li><a href="/b/becker-august/index.html">Becker Document</a></li><li><a href="/b/bednarz-wladyslaw/index.html">Bednarz, W&#322;adys&#322;aw</a></li><li><a href="/b/beer-abraham/index.html">Beer, Abraham</a></li><li><a href="/b/behr-emil/index.html">Behr, Emil</a></li><li><a href="/b/belgium/index.html">Belgium</a></li><li><a href="/b/belzec/index.html">Belzec</a></li><li><a href="/b/belzec-trial/index.html">Belzec Trial</a></li><li><a href="/b/bendel-charles-s/index.html">Bendel, Charles S.</a></li><li><a href="/b/bennahmias-daniel/index.html">Bennahmias, Daniel</a></li><li><a href="/b/benroubi-maurice/index.html">Benroubi, Maurice</a></li><li><a href="/b/berg-isai-davidovich/index.html">Berg, Isai Davidovich</a></li><li><a href="/b/bergen-belsen/index.html">Bergen-Belsen</a></li><li><a href="/b/bergen-belsen-trial/index.html">Bergen-Belsen Trials</a></li><li><a href="/b/berger-oskar/index.html">Berger, Oskar</a></li><li><a href="/i/iron-blue/index.html">Berlin blue</a></li><li><a href="/b/berlyant-semen/index.html">Berlyant, Semen</a></li><li><a href="/b/bialek-regina/index.html">Bialek, Regina</a></li><li><a href="/b/bialystok/index.html">Bia&#322;ystok</a></li><li><a href="/r/rumbula/index.html">Bikernieki</a></li><li><a href="/b/bily-henry/index.html">Bily, Henry</a></li><li><a href="/b/bimko-ada/index.html">Bimko, Ada</a></li><li><a href="/b/birkenau/index.html">Birkenau</a></li><li><a href="/b/birobidzhan/index.html">Birobidzhan</a></li><li><a href="/b/biskovitz-yaakov/index.html">Biskovitz, Ya&rsquo;akov</a></li><li><a href="/b/blaha-franz/index.html">Blaha, Franz</a></li><li><a href="/b/blatt-thomas-toivi/index.html">Blatt, Thomas Toivi</a></li><li><a href="/b/blobel-paul/index.html">Blobel, Paul</a></li><li><a href="/i/iron-blue/index.html">blue wall discoloration</a></li><li><a href="/b/blyazer-a/index.html">Blyazer, A.</a></li><li><a href="/b/bock-ludwig/index.html">Bock, Ludwig</a></li><li><a href="/b/bock-richard/index.html">B&ouml;ck, Richard</a></li><li><a href="/b/boger-wilhelm/index.html">Boger, Wilhelm</a></li><li><a href="/c/czechia/index.html">Bohemia</a></li><li><a href="/b/bomba-abraham/index.html">Bomba, Abraham</a></li><li><a href="/b/bone-mill/index.html">bone mill</a></li><li><a href="/b/bouard-michel-de/index.html">Bo&uuml;ard, Michel de</a></li><li><a href="/b/brener-hejnoch/index.html">Brener, Hejnoch</a></li><li><a href="/b/brest/index.html">Brest</a></li><li><a href="/b/british-radio-intercepts/index.html">British Radio Intercepts</a></li><li><a href="/b/broad-pery-s/index.html">Broad, Pery S.</a></li><li><a href="/b/brodsky-isaak/index.html">Brodsky, Isaak</a></li><li><a href="/b/bronnaya-gora/index.html">Bronnaya Gora</a></li><li><a href="/b/buchenwald/index.html">Buchenwald</a></li><li><a href="/b/buchholcowa-janina/index.html">Buchholcowa, Janina</a></li><li><a href="/b/budnik-david/index.html">Budnik, David</a></li><li><a href="/b/buki-milton/index.html">Buki, Milton</a></li><li><a href="/b/bulgaria/index.html">Bulgaria</a></li><li><a href="/b/buna/index.html">BUNA</a></li><li><a href="/b/bunkers/index.html">bunkers</a></li><li><a href="/b/burmeister-walter/index.html">Burmeister, Walter</a></li></ul>
+<!-- end bbinclude -->
 				<h3>
 					C
 				</h3>
@@ -133,28 +135,33 @@
 				<h3>
 					U
 				</h3>
-				<div id="u-section">
-				</div>
+<!-- #bbinclude "u.incl" -->
+<ul class="columns"><li><a href="/u/uhlenbrock-kurt/index.html">Uhlenbrock, Kurt</a></li><li><a href="/u/ukraine/index.html">Ukraine</a></li><li><a href="/m/microwave-delousing/index.html">ultra-shortwave delousing</a></li><li><a href="/u/uthgenannt-otto/index.html">Uthgenannt, Otto</a></li></ul>
+<!-- end bbinclude -->
 				<h3>
 					V
 				</h3>
-				<div id="v-section">
-				</div>
+<!-- #bbinclude "v.incl" -->
+<ul class="columns"><li><a href="/v/vaillant-couturier-marie-claude/index.html">Vaillant-Couturier, Marie-Claude</a></li><li><a href="/v/van-den-bergh-siegfried/index.html">van den Bergh, Siegfried</a></li><li><a href="/v/van-herwaarden-maria/index.html">Van Herwaarden, Maria</a></li><li><a href="/v/van-roden-edward-l/index.html">van Roden, Edward L.</a></li><li><a href="/v/veil-simone/index.html">Veil, Simone</a></li><li><a href="/v/venezia-morris/index.html">Venezia, Morris</a></li><li><a href="/v/venezia-shlomo/index.html">Venezia, Shlomo</a></li><li><a href="/v/ventilation/index.html">Ventilation</a></li><li><a href="/e/extirpation/index.html"><i>vernichtung</i></a></li><li><a href="/m/microwave-delousing/index.html">VHF delousing</a></li><li><a href="/v/voss-peter/index.html">Voss, Peter</a></li><li><a href="/v/vrba-rudolf/index.html">Vrba, Rudolf</a></li></ul>
+<!-- end bbinclude -->
 				<h3>
 					W
 				</h3>
-				<div id="w-section">
-				</div>
+<!-- #bbinclude "w.incl" -->
+<ul class="columns"><li><a href="/w/wael-monique-de/index.html">Wael, Monique de</a></li><li><a href="/w/walter-bernhard/index.html">Walter, Bernhard</a></li><li><a href="/w/wannsee-conference/index.html">Wannsee Conference</a></li><li><a href="/w/wannsee-protocol/index.html">Wannsee Protocol</a></li><li><a href="/w/war-refugee-board-report/index.html">War Refugee Board Report</a></li><li><a href="/w/warsaw-ghetto/index.html">Warsaw Ghetto</a></li><li><a href="/w/warszawski-szyja/index.html">Warszawski, Szyja</a></li><li><a href="/w/watt-donald/index.html">Watt, Donald</a></li><li><a href="/t/tools-of-mass-murder/index.html">weapons of mass murder</a></li><li><a href="/w/wedding-rings/index.html">wedding rings</a></li><li><a href="/w/weise-gottfried/index.html">Weise, Gottfried</a></li><li><a href="/w/weiss-janda/index.html">Weiss, Janda</a></li><li><a href="/w/weissmandel-dov/index.html">Weissmandel, Dov</a></li><li><a href="/w/weliczker-leon/index.html">Weliczker, Leon</a></li><li><a href="/w/weliczker-leon/index.html">Wells, Leon</a></li><li><a href="/w/wennerstrum-charles-f/index.html">Wennerstrum, Charles F.</a></li><li><a href="/w/wentritt-harry/index.html">Wentritt, Harry</a></li><li><a href="/w/werner-kurt/index.html">Werner, Kurt</a></li><li><a href="/t/tabeau-jerzy/index.html">Weso&#322;owski, Jerzy</a></li><li><a href="/w/wetzler-alfred/index.html">Wetzler, Alfred</a></li><li><a href="/w/widmann-albert/index.html">Widmann, Albert</a></li><li><a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik, Jankiel (Yankiel)</a></li><li><a href="/w/wiesel-elie/index.html">Wiesel, Elie</a></li><li><a href="/w/wiesenthal-simon/index.html">Wiesenthal, Simon</a></li><li><a href="/w/wijnberg-saartje/index.html">Wijnberg, Saartje</a></li><li><a href="/w/willenberg-samuel/index.html">Willenberg, Samuel</a></li><li><a href="/z/zyklon-b-introduction-devices/index.html">wire-mesh columns (for use with Zyklon)</a></li><li><a href="/w/wirth-christian/index.html">Wirth, Christian</a></li><li><a href="/w/wirths-eduard/index.html">Wirths, Eduard</a></li><li><a href="/w/wirtschafts-und-verwaltungs-hauptamt/index.html">Wirtschafts- und Verwaltungshauptamt</a></li><li><a href="/w/wisliceny-dieter/index.html">Wisliceny, Dieter</a></li><li><a href="/w/witch-trials/index.html">witch trials</a></li><li><a href="/w/witnesses/index.html">witnesses</a></li><li><a href="/w/witnesses-against-mass-murder/index.html">witnesses against mass murder</a></li><li><a href="/w/wohlfahrt-wilhelm/index.html">Wohlfahrt, Wilhelm</a></li><li><a href="/w/wolff-karl/index.html">Wolff, Karl</a></li><li><a href="/w/wolken-otto/index.html">Wolken, Otto</a></li><li><a href="/w/wolzek/index.html">Wolzek</a></li><li><a href="/p/producer-gas/index.html">wood gas</a></li></ul>
+<!-- end bbinclude -->
 				<h3>
 					Y
 				</h3>
-				<div id="y-section">
-				</div>
+<!-- #bbinclude "y.incl" -->
+<ul class="columns"><li><a href="/y/yad-vashem/index.html">Yad Vashem</a></li><li><a href="/y/yugoslavia/index.html">Yugoslavia</a></li></ul>
+<!-- end bbinclude -->
 				<h3>
 					Z
 				</h3>
-				<div id="z-section">
-				</div>
+<!-- #bbinclude "z.incl" -->
+<ul class="columns"><li><a href="/z/zabecki-franciszek/index.html">Z&#261;becki, Franciszek</a></li><li><a href="/z/zaydel-matvey/index.html">Zaydel, Matvey</a></li><li><a href="/z/zentrale-stelle/index.html">Zentrale Stelle</a></li><li><a href="/z/zentralsauna-auschwitz-birkenau/index.html">Zentralsauna, Auschwitz Birkenau</a></li><li><a href="/z/ziereis-franz/index.html">Ziereis, Franz</a></li><li><a href="/z/zlobnicki-adam/index.html">&#377;&#322;obnicki, Adam</a></li><li><a href="/z/zundel-trials/index.html">Z&uuml;ndel Trials</a></li><li><a href="/z/zurawski-mieczyslaw/index.html">&#379;urawski, Mieczys&#322;aw</a></li><li><a href="/z/zyklon-b/index.html">Zyklon B</a></li><li><a href="/z/zyklon-b-introduction-devices/index.html">Zyklon-B introduction devices</a></li></ul>
+<!-- end bbinclude -->
 				<ul>
 					<li><a href="/bibliography/index.html">Bibliography</a></li>
 				</ul>
@@ -167,8 +174,6 @@
 <!-- end bbinclude -->
 <script>
 	$(document).ready(function() {
-		$( "#a-section" ).load( "/a/index.html #toc" );
-		$( "#b-section" ).load( "/b/index.html #toc" );
 		$( "#c-section" ).load( "/c/index.html #toc" );
 		$( "#d-section" ).load( "/d/index.html #toc" );
 		$( "#e-section" ).load( "/e/index.html #toc" );
@@ -187,11 +192,6 @@
 		$( "#r-section" ).load( "/r/index.html #toc" );
 		$( "#s-section" ).load( "/s/index.html #toc" );
 		$( "#t-section" ).load( "/t/index.html #toc" );
-		$( "#u-section" ).load( "/u/index.html #toc" );
-		$( "#v-section" ).load( "/v/index.html #toc" );
-		$( "#w-section" ).load( "/w/index.html #toc" );
-		$( "#y-section" ).load( "/y/index.html #toc" );
-		$( "#z-section" ).load( "/z/index.html #toc" );
 	});
 </script>
 </body>
