--- a/w/index.html
+++ b/w/index.html
@@ -17,49 +17,9 @@
 			<h2>
 				W
 			</h2>
-			<div id="toc">
-				<ul class="columns">
-					<li><a href="/w/wael-monique-de/index.html">Wael, Monique de</a></li>
-					<li><a href="/w/walter-bernhard/index.html">Walter, Bernhard</a></li>
-					<li><a href="/w/wannsee-conference/index.html">Wannsee Conference</a></li>
-					<li><a href="/w/wannsee-protocol/index.html">Wannsee Protocol</a></li>
-					<li><a href="/w/war-refugee-board-report/index.html">War Refugee Board Report</a></li>
-					<li><a href="/w/warsaw-ghetto/index.html">Warsaw Ghetto</a></li>
-					<li><a href="/w/warszawski-szyja/index.html">Warszawski, Szyja</a></li>
-					<li><a href="/w/watt-donald/index.html">Watt, Donald</a></li>
-					<li><a href="/t/tools-of-mass-murder/index.html">weapons of mass murder</a></li>
-					<li><a href="/w/wedding-rings/index.html">wedding rings</a></li>
-					<li><a href="/w/weise-gottfried/index.html">Weise, Gottfried</a></li>
-					<li><a href="/w/weiss-janda/index.html">Weiss, Janda</a></li>
-					<li><a href="/w/weissmandel-dov/index.html">Weissmandel, Dov</a></li>
-					<li><a href="/w/weliczker-leon/index.html">Weliczker, Leon</a></li>
-					<li><a href="/w/weliczker-leon/index.html">Wells, Leon</a></li>
-					<li><a href="/w/wennerstrum-charles-f/index.html">Wennerstrum, Charles F.</a></li>
-					<li><a href="/w/wentritt-harry/index.html">Wentritt, Harry</a></li>
-					<li><a href="/w/werner-kurt/index.html">Werner, Kurt</a></li>
-					<li><a href="/t/tabeau-jerzy/index.html">Weso&#322;owski, Jerzy</a></li>
-					<li><a href="/w/wetzler-alfred/index.html">Wetzler, Alfred</a></li>
-					<li><a href="/w/widmann-albert/index.html">Widmann, Albert</a></li>
-					<li><a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik, Jankiel (Yankiel)</a></li>
-					<li><a href="/w/wiesel-elie/index.html">Wiesel, Elie</a></li>
-					<li><a href="/w/wiesenthal-simon/index.html">Wiesenthal, Simon</a></li>
-					<li><a href="/w/wijnberg-saartje/index.html">Wijnberg, Saartje</a></li>
-					<li><a href="/w/willenberg-samuel/index.html">Willenberg, Samuel</a></li>
-					<li><a href="/z/zyklon-b-introduction-devices/index.html">wire-mesh columns (for use with Zyklon)</a></li>
-					<li><a href="/w/wirth-christian/index.html">Wirth, Christian</a></li>
-					<li><a href="/w/wirths-eduard/index.html">Wirths, Eduard</a></li>
-					<li><a href="/w/wirtschafts-und-verwaltungs-hauptamt/index.html">Wirtschafts- und Verwaltungshauptamt</a></li>
-					<li><a href="/w/wisliceny-dieter/index.html">Wisliceny, Dieter</a></li>
-					<li><a href="/w/witch-trials/index.html">witch trials</a></li>
-					<li><a href="/w/witnesses/index.html">witnesses</a></li>
-					<li><a href="/w/witnesses-against-mass-murder/index.html">witnesses against mass murder</a></li>
-					<li><a href="/w/wohlfahrt-wilhelm/index.html">Wohlfahrt, Wilhelm</a></li>
-					<li><a href="/w/wolff-karl/index.html">Wolff, Karl</a></li>
-					<li><a href="/w/wolken-otto/index.html">Wolken, Otto</a></li>
-					<li><a href="/w/wolzek/index.html">Wolzek</a></li>
-					<li><a href="/p/producer-gas/index.html">wood gas</a></li>
-				</ul>
-			</div>
+<!-- #bbinclude "w.incl" -->
+<ul class="columns"><li><a href="/w/wael-monique-de/index.html">Wael, Monique de</a></li><li><a href="/w/walter-bernhard/index.html">Walter, Bernhard</a></li><li><a href="/w/wannsee-conference/index.html">Wannsee Conference</a></li><li><a href="/w/wannsee-protocol/index.html">Wannsee Protocol</a></li><li><a href="/w/war-refugee-board-report/index.html">War Refugee Board Report</a></li><li><a href="/w/warsaw-ghetto/index.html">Warsaw Ghetto</a></li><li><a href="/w/warszawski-szyja/index.html">Warszawski, Szyja</a></li><li><a href="/w/watt-donald/index.html">Watt, Donald</a></li><li><a href="/t/tools-of-mass-murder/index.html">weapons of mass murder</a></li><li><a href="/w/wedding-rings/index.html">wedding rings</a></li><li><a href="/w/weise-gottfried/index.html">Weise, Gottfried</a></li><li><a href="/w/weiss-janda/index.html">Weiss, Janda</a></li><li><a href="/w/weissmandel-dov/index.html">Weissmandel, Dov</a></li><li><a href="/w/weliczker-leon/index.html">Weliczker, Leon</a></li><li><a href="/w/weliczker-leon/index.html">Wells, Leon</a></li><li><a href="/w/wennerstrum-charles-f/index.html">Wennerstrum, Charles F.</a></li><li><a href="/w/wentritt-harry/index.html">Wentritt, Harry</a></li><li><a href="/w/werner-kurt/index.html">Werner, Kurt</a></li><li><a href="/t/tabeau-jerzy/index.html">Weso&#322;owski, Jerzy</a></li><li><a href="/w/wetzler-alfred/index.html">Wetzler, Alfred</a></li><li><a href="/w/widmann-albert/index.html">Widmann, Albert</a></li><li><a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik, Jankiel (Yankiel)</a></li><li><a href="/w/wiesel-elie/index.html">Wiesel, Elie</a></li><li><a href="/w/wiesenthal-simon/index.html">Wiesenthal, Simon</a></li><li><a href="/w/wijnberg-saartje/index.html">Wijnberg, Saartje</a></li><li><a href="/w/willenberg-samuel/index.html">Willenberg, Samuel</a></li><li><a href="/z/zyklon-b-introduction-devices/index.html">wire-mesh columns (for use with Zyklon)</a></li><li><a href="/w/wirth-christian/index.html">Wirth, Christian</a></li><li><a href="/w/wirths-eduard/index.html">Wirths, Eduard</a></li><li><a href="/w/wirtschafts-und-verwaltungs-hauptamt/index.html">Wirtschafts- und Verwaltungshauptamt</a></li><li><a href="/w/wisliceny-dieter/index.html">Wisliceny, Dieter</a></li><li><a href="/w/witch-trials/index.html">witch trials</a></li><li><a href="/w/witnesses/index.html">witnesses</a></li><li><a href="/w/witnesses-against-mass-murder/index.html">witnesses against mass murder</a></li><li><a href="/w/wohlfahrt-wilhelm/index.html">Wohlfahrt, Wilhelm</a></li><li><a href="/w/wolff-karl/index.html">Wolff, Karl</a></li><li><a href="/w/wolken-otto/index.html">Wolken, Otto</a></li><li><a href="/w/wolzek/index.html">Wolzek</a></li><li><a href="/p/producer-gas/index.html">wood gas</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
