--- a/v/index.html
+++ b/v/index.html
@@ -17,22 +17,9 @@
 			<h2>
 				V
 			</h2>
-			<div id="toc">
-				<ul class="columns">
-					<li><a href="/v/vaillant-couturier-marie-claude/index.html">Vaillant-Couturier, Marie-Claude</a></li>
-					<li><a href="/v/van-den-bergh-siegfried/index.html">van den Bergh, Siegfried</a></li>
-					<li><a href="/v/van-herwaarden-maria/index.html">Van Herwaarden, Maria</a></li>
-					<li><a href="/v/van-roden-edward-l/index.html">van Roden, Edward L.</a></li>
-					<li><a href="/v/veil-simone/index.html">Veil, Simone</a></li>
-					<li><a href="/v/venezia-morris/index.html">Venezia, Morris</a></li>
-					<li><a href="/v/venezia-shlomo/index.html">Venezia, Shlomo</a></li>
-					<li><a href="/v/ventilation/index.html">Ventilation</a></li>
-					<li><a href="/e/extirpation/index.html"><i>vernichtung</i></a></li>
-					<li><a href="/m/microwave-delousing/index.html">VHF delousing</a></li>
-					<li><a href="/v/voss-peter/index.html">Voss, Peter</a></li>
-					<li><a href="/v/vrba-rudolf/index.html">Vrba, Rudolf</a></li>
-				</ul>
-			</div>
+<!-- #bbinclude "v.incl" -->
+<ul class="columns"><li><a href="/v/vaillant-couturier-marie-claude/index.html">Vaillant-Couturier, Marie-Claude</a></li><li><a href="/v/van-den-bergh-siegfried/index.html">van den Bergh, Siegfried</a></li><li><a href="/v/van-herwaarden-maria/index.html">Van Herwaarden, Maria</a></li><li><a href="/v/van-roden-edward-l/index.html">van Roden, Edward L.</a></li><li><a href="/v/veil-simone/index.html">Veil, Simone</a></li><li><a href="/v/venezia-morris/index.html">Venezia, Morris</a></li><li><a href="/v/venezia-shlomo/index.html">Venezia, Shlomo</a></li><li><a href="/v/ventilation/index.html">Ventilation</a></li><li><a href="/e/extirpation/index.html"><i>vernichtung</i></a></li><li><a href="/m/microwave-delousing/index.html">VHF delousing</a></li><li><a href="/v/voss-peter/index.html">Voss, Peter</a></li><li><a href="/v/vrba-rudolf/index.html">Vrba, Rudolf</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
