--- a/z/index.html
+++ b/z/index.html
@@ -17,20 +17,9 @@
 			<h2>
 				Z
 			</h2>
-			<div id="toc">
-				<ul class="columns">
-					<li><a href="/z/zabecki-franciszek/index.html">Z&#261;becki, Franciszek</a></li>
-					<li><a href="/z/zaydel-matvey/index.html">Zaydel, Matvey</a></li>
-					<li><a href="/z/zentrale-stelle/index.html">Zentrale Stelle</a></li>
-					<li><a href="/z/zentralsauna-auschwitz-birkenau/index.html">Zentralsauna, Auschwitz Birkenau</a></li>
-					<li><a href="/z/ziereis-franz/index.html">Ziereis, Franz</a></li>
-					<li><a href="/z/zlobnicki-adam/index.html">&#377;&#322;obnicki, Adam</a></li>
-					<li><a href="/z/zundel-trials/index.html">Z&uuml;ndel Trials</a></li>
-					<li><a href="/z/zurawski-mieczyslaw/index.html">&#379;urawski, Mieczys&#322;aw</a></li>
-					<li><a href="/z/zyklon-b/index.html">Zyklon B</a></li>
-					<li><a href="/z/zyklon-b-introduction-devices/index.html">Zyklon-B introduction devices</a></li>
-				</ul>
-			</div>
+<!-- #bbinclude "z.incl" -->
+<ul class="columns"><li><a href="/z/zabecki-franciszek/index.html">Z&#261;becki, Franciszek</a></li><li><a href="/z/zaydel-matvey/index.html">Zaydel, Matvey</a></li><li><a href="/z/zentrale-stelle/index.html">Zentrale Stelle</a></li><li><a href="/z/zentralsauna-auschwitz-birkenau/index.html">Zentralsauna, Auschwitz Birkenau</a></li><li><a href="/z/ziereis-franz/index.html">Ziereis, Franz</a></li><li><a href="/z/zlobnicki-adam/index.html">&#377;&#322;obnicki, Adam</a></li><li><a href="/z/zundel-trials/index.html">Z&uuml;ndel Trials</a></li><li><a href="/z/zurawski-mieczyslaw/index.html">&#379;urawski, Mieczys&#322;aw</a></li><li><a href="/z/zyklon-b/index.html">Zyklon B</a></li><li><a href="/z/zyklon-b-introduction-devices/index.html">Zyklon-B introduction devices</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
